--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
         "postcss": "^8.4.41",
         "tailwindcss": "^3.4.10",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "boxicons": "^2.1.4"
     }
 }
