--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@tailwindcss/aspect-ratio": "^0.4.2",
         "boxicons": "^2.1.4"
     }
 }
