--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "midtrans/midtrans-php": "^2.5",
-        "spatie/laravel-medialibrary": "^11.8"
+        "spatie/laravel-medialibrary": "^11.8",
+        "spatie/laravel-permission": "^6.9"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
